<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/rlDialog">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LL1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewResult" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL1"
        android:id="@+id/LL2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_quit"
            android:id="@+id/buttonQuit"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_restart"
            android:id="@+id/buttonRestart"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL2"
        android:id="@+id/LL3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_result"
            android:id="@+id/buttonShowResult"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>